# AdventOfCode

./: .gitignore  AdventOfCode.code-workspace  README.md
2019/JavaScript-TypeScript/day1/: solution_a.ts  solution_b.ts  tsconfig.json
2019/JavaScript-TypeScript/day10/: package.json  solution_b.ts
2019/JavaScript-TypeScript/day11/: solution_b.ts
2019/JavaScript-TypeScript/day2/: solution_b.ts  tsconfig.json
JS/day1/: .eslintrc.json  solution_a.mjs  solution_b.mjs
JS/day10/: solution_a.mjs  solution_b.mjs
JS/day11/: solution_a.mjs  solution_b.mjs
JS/day12/: solution_a.mjs  solution_b.mjs
JS/day13/: package.json  solution_a.mjs  solution_b.mjs
JS/day14/: solution_a.mjs  solution_b.mjs
JS/day15/: .eslintrc.json  package.json  solution_a.mjs  solution_b.mjs
JS/day16/: solution_a.mjs  solution_b.mjs
JS/day17/: package.json  solution_a.mjs  solution_b.mjs
JS/day18/: package.json  solution_a.mjs  solution_b.mjs
JS/day2/: solution_a.mjs  solution_b.mjs
JS/day3/: package.json  solution_a.js  solution_b.js
JS/day4/: solution_a.mjs  solution_b.mjs
JS/day5/: solution_a.mjs  solution_b.mjs
JS/day6/: solution_a.mjs  solution_b.mjs
JS/day7/: package.json  solution_a.mjs  solution_b.mjs
JS/day7_attempt_one/: solution_a.mjs  solution_b.mjs
JS/day8/: solution_a.mjs  solution_b.mjs
JS/day9/: .eslintrc.json  solution_a.mjs  solution_b.mjs
JS/template/: solution_a.mjs  solution_b.mjs
JavaScript-TypeScript/day10/: grid.ts  solution_a.ts
JavaScript-TypeScript/day11/: solution_a.ts
JavaScript-TypeScript/day2/: solution_a.ts
JavaScript-TypeScript/day3/: solution_b.ts  tsconfig.json
JavaScript-TypeScript/day4/: package.json  solution_b.ts  tsconfig.json
JavaScript-TypeScript/day5/: solution_b.ts
JavaScript-TypeScript/day6/: solution_b.ts
JavaScript-TypeScript/day7/: package.json  solution_a.ts  solution_b.ts  tsconfig.json
JavaScript-TypeScript/day9/: solution_a.ts
JavaScript-TypeScript/template/: solution_b.ts
Python/day1/: solution.ipynb
Python/day2/: solution.ipynb
Python/day3/: solution.ipynb
Python/day4/: solution.ipynb
Python/day5/: solution.ipynb
Python/day6/: solution.ipynb
Python/template/: solution.ipynb
Rust/day1/: Cargo.toml  main.rs
TypeScript/day7/: package.json  solution_a.ts  solution_b.ts
TypeScript/day8/: solution_a.ts  solution_b.ts
c/: build-all.ps1  meson.build
c/day1/: main.c
c/day2/: main.c
c/day3/: main.c
c/template/: aoc.h  main.c  meson.build  part1.c  part2.c
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/day00/: part_1.rs  part_2.rs
rust/src/day01/: main.rs  part_1.rs  part_2.rs  sample_input_part_1.txt
rust/src/day02/: main.rs  part_1.rs  part_2.rs
rust/src/day03/: main.rs  part_1.rs  part_2.rs
rust/src/day04/: main.rs  part_1.rs  part_2.rs
rust/src/day05/: main.rs  part_1.rs  part_2.rs
rust/src/day06/: main.rs  part_1.rs  part_2.rs  solutions.rs
rust/src/day07/: main.rs  part_1.rs  part_2.rs
rust/src/day08/: part_1.rs  part_2.rs
rust/src/day09/: main.rs  part_1.rs  part_2.rs
rust/src/day10/: main.rs  part_1.rs  part_2.rs
rust/src/day11/: main.rs  part_1.rs  part_2.rs
rust/src/day12/: main.rs  part_1.rs  part_2.rs
rust/src/day14/: main.rs  part_1.rs  part_2.rs
(+9 files in other folders)
