project('adventofcode', 'c')
subdir('template')
# day01
# subdir('day01')
# day02
# subdir('day02')
# day03
# subdir('day03')
# day04
# subdir('day04')
# day05
# subdir('day05')
# day06
# subdir('day06')
# day07
# subdir('day07')
# day08
# subdir('day08')
# day09
# subdir('day09')
# day10
# subdir('day10')
# day11
# subdir('day11')
# day12
# subdir('day12')
# day13
# subdir('day13')
# day14
# subdir('day14')
# day15
# subdir('day15')
# day16
# subdir('day16')
# day17
# subdir('day17')
# day18
# subdir('day18')
# day19
# subdir('day19')
# day20
# subdir('day20')
# day21
# subdir('day21')
# day22
# subdir('day22')
# day23
# subdir('day23')
# day24
# subdir('day24')
# day25
# subdir('day25')