[package]
name = "advent-of-code"
version = "22.11.2"
edition = "2021"
resolver = "2"

[profile.release]
strip = "symbols"
lto = "fat"
opt-level = 3
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
[profile.dev.build-override]
opt-level = 3
codegen-units = 1
[profile.release.build-override]
opt-level = 3
codegen-units = 1

[[bin]]
name = "day01"
path = "src/day01/main.rs"

[[bin]]
name = "day02"
path = "src/day02/main.rs"

[[bin]]
name = "day03"
path = "src/day03/main.rs"

[[bin]]
name = "day04"
path = "src/day04/main.rs"

[[bin]]
name = "day05"
path = "src/day05/main.rs"

[[bin]]
name = "day06"
path = "src/day06/main.rs"

[[bin]]
name = "day07"
path = "src/day07/main.rs"

[[bin]]
name = "day08"
path = "src/day08/main.rs"

[[bin]]
name = "day09"
path = "src/day09/main.rs"

[[bin]]
name = "day10"
path = "src/day10/main.rs"

[[bin]]
name = "day11"
path = "src/day11/main.rs"

[dependencies]
# Required for one of the day06 solutions (commented out)
# phf = { version = "0.11.1", features = ["macros"] }