[package]
name = "advent-of-code"
version = "23.2.1"
edition = "2021"
default-run = "day02"

[profile.release]
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
[profile.release.build-override]
codegen-units = 1

[[bin]]
name = "template"
# day00 for alphabetic sorting
path = "src/day00/main.rs"
test = false

[[bin]]
name = "day01"
path = "src/day01/main.rs"

[[bin]]
name = "day02"
path = "src/day02/main.rs"
