[package]
name = "advent-of-code"
version = "23.6.1"
edition = "2021"
default-run = "day06"

[profile.release]
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
[profile.release.build-override]
codegen-units = 1

[[bin]]
name = "template"
# day00 for alphabetic sorting
path = "src/day00/main.rs"
test = false

[[bin]]
name = "day01"
path = "src/day01/main.rs"

[[bin]]
name = "day02"
path = "src/day02/main.rs"

[[bin]]
name = "day03"
path = "src/day03/main.rs"

[[bin]]
name = "day04"
path = "src/day04/main.rs"

[[bin]]
name = "day05"
path = "src/day05/main.rs"

[[bin]]
name = "day06"
path = "src/day06/main.rs"
